src/objects/Repair__c.object
<CustomObject>
    <description>This object will be used in cases where a Service Center repairs an existing Defective Item and it is converted as Usable Item</description>
    <fields>
        <fullName>Item_Repaired_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Repaired 1</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Repair</relationshipLabel>
        <relationshipName>Repair</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Repaired_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Repaired 2</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Repair (Item Repaired 2)</relationshipLabel>
        <relationshipName>Repair1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Repaired_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Repaired 3</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Repair (Item Repaired 3)</relationshipLabel>
        <relationshipName>Repair2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code_1__c</fullName>
        <formula>Item_Repaired_1__r.Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code_2__c</fullName>
        <formula>Item_Repaired_2__r.Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code_3__c</fullName>
        <formula>Item_Repaired_3__r.Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_1__c</fullName>
        <label>Quantity 1</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_2__c</fullName>
        <label>Quantity 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_3__c</fullName>
        <label>Quantity 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <label>Repair</label>
    <nameField>
        <displayFormat>REP-{0000}</displayFormat>
        <label>Repair Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repair</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>